--- a/css/liquidity-pool.css
+++ b/css/liquidity-pool.css
@@ -363,4 +363,7 @@
         margin-right: 6px;
         max-height: 12px; }
 
+.farm-action-th {
+  width: 150px; }
+
 /*# sourceMappingURL=liquidity-pool.css.map */
